Fix aboutMe margins on mobile

--- a/src/stylesheets/components/Section/AboutMe.module.sass
+++ b/src/stylesheets/components/Section/AboutMe.module.sass
@@ -2,7 +2,8 @@
 
 .description
   width: 660px
-  margin-right: 30px
+  +screen(greaterThanMedium)
+    margin-right: 30px
   +screen(extraLarge)
     width: 550px
   +screen(large)
@@ -16,15 +17,11 @@
   border: 7px solid #494949
   filter: grayscale(85%)
   border-radius: 100%
-  margin-right: 50px
   transition: filter .2s
   +screen(lessThanMedium)
     display: none
   +screen(large)
     width: 250px
-    margin-right: 0
-  +screen(extraLarge)
-    margin-right: 0
   &:hover
     filter: grayscale(0%)
 
